# plusar

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  example_basic.cpp
include/plusar/: memory.hpp  optional.hpp  stream.hpp  type_traits.hpp
plusar-core/: CMakeLists.txt
plusar-core/include/core/: environment.hpp  optional.hpp  stream.hpp
plusar-core/src/: environment.hpp  memory.hpp  optional.hpp  stream.hpp  type_traits.hpp
plusar-examples/: CMakeLists.txt  example_basic.cpp
plusar-tests/: CMakeLists.txt  main.cpp  test_stream.cpp
tests/: CMakeLists.txt  test_stream.cpp
